--- a/xfce4_backup/xfce4/panel/whiskermenu-7.rc
+++ b/xfce4_backup/xfce4/panel/whiskermenu-7.rc
@@ -1,5 +1,5 @@
-favorites=xfce4-web-browser.desktop,xfce4-mail-reader.desktop,xfce4-file-manager.desktop,xfce4-terminal-emulator.desktop,mintinstall.desktop,firefox-esr.desktop
-recent=xfce4-terminal-emulator.desktop,mintinstall.desktop,firefox-esr.desktop,xfce4-web-browser.desktop,xfce4-file-manager.desktop
+favorites=xfce4-web-browser.desktop,xfce4-mail-reader.desktop,xfce4-file-manager.desktop,xfce4-terminal-emulator.desktop
+recent=code.desktop,xfce4-web-browser.desktop,xfce4-terminal-emulator.desktop,org.xfce.ristretto.desktop,audacity.desktop,stacer.desktop,xfce4-file-manager.desktop
 button-icon=xfce4-whiskermenu
 button-single-row=false
 show-button-title=false
@@ -7,19 +7,21 @@ show-button-icon=true
 launcher-show-name=true
 launcher-show-description=true
 launcher-show-tooltip=true
-item-icon-size=3
+launcher-icon-size=3
 hover-switch-category=false
 category-show-name=true
 category-icon-size=1
-load-hierarchy=false
-view-as-icons=true
+sort-categories=true
+view-mode=0
 default-category=0
 recent-items-max=10
 favorites-in-recent=true
 position-search-alternate=true
 position-commands-alternate=false
 position-categories-alternate=true
+position-categories-horizontal=false
 stay-on-focus-out=false
+profile-shape=0
 confirm-session-command=true
 menu-width=450
 menu-height=500
