--- a/xfce4_backup/xfce4/desktop/icons.screen0-1904x884.rc
+++ b/xfce4_backup/xfce4/desktop/icons.screen0-1904x884.rc
@@ -1,10 +1,6 @@
 [xfdesktop-version-4.10.3+-rcfile_format]
 4.10.3+=true
 
-[/home/maruf/Desktop/pi-apps.desktop]
-row=3
-col=0
-
 [Trash]
 row=0
 col=0
@@ -13,7 +9,7 @@ col=0
 row=1
 col=0
 
-[/home/maruf]
+[/home/ubuntu]
 row=2
 col=0
 
