--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,10 +32,10 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/ubuntu-pulse-xfce-novnc
           tags: |
             type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
+            # type=ref,event=pr
+            # type=semver,pattern={{version}}
+            # type=semver,pattern={{major}}.{{minor}}
+            # type=sha
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
